Opened 5 years ago
Closed 5 years ago
#15913 closed bug (fixed)
[Installer] WebPositive bookmarks are broken (regression)
Reported by: | diver | Owned by: | nielx |
---|---|---|---|
Priority: | blocker | Milestone: | R1/beta2 |
Component: | Applications/Installer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev54088 x86_64
Default WebPositive bookmarks can't be opened and lack icons. Same thing happened to Tracker templates.
Could be a problem with the CI?
Change History (26)
comment:1 by , 5 years ago
comment:3 by , 5 years ago
Priority: | normal → blocker |
---|
comment:4 by , 5 years ago
It's unclear from the ticket description, are the Tracker templates broken again or are you referring to a previous issue that has been fixed?
follow-up: 6 comment:5 by , 5 years ago
Tracker templates are not visible in Tracker's "New" menu. However, if you open Tracker templates folder, select all and drag them a bit they appear in the New menu.
comment:6 by , 5 years ago
Replying to diver:
Tracker templates are not visible in Tracker's "New" menu. However, if you open Tracker templates folder, select all and drag them a bit they appear in the New menu.
I was ready to submit this when I noticed it was reported already. I can confirm the strange behaviour: you just need to drag a bit the templates in their folder to make them show in the 'New' menu. The ones you select and drag are those you'll see.
They WILL stay there then even after a system reboot or tracker restart.
comment:7 by , 5 years ago
Can you check the file attributes before and after nudging the files? I suspect Tracker automatically "identifies" them when doing this. Does it happen with the bookmarks too, or are these more broken than that?
comment:9 by , 5 years ago
No attribute presents in template dile after nudging, can't check before (since it seems not reversible I should check in a clean install and unfortunately I can't do that so easily now)
comment:10 by , 5 years ago
I don't reproduce when building haiku from haiku. So it is probably a problem with building from Linux only.
comment:11 by , 5 years ago
Reproducible with the latest master. Gives an error to select the application to open the bookmark, but still doesn't work even if Web+ is selected.
comment:12 by , 5 years ago
Bookmark files are empty, all the data is in the attributes. So it makes sense that if the attributes go missing, the file won't work.
comment:13 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Beta2 status meeting: reassign to pulkomandy
comment:14 by , 5 years ago
Component: | Build System → Sys-Admin |
---|---|
Owner: | changed from | to
I don't reproduce this problem on my machine with XFS filesystem and USE_XATTR set. So it must be a problem specific to the buildbot configuration. Reassigning to kallisti5 since I don't have access to the buildbots.
comment:15 by , 5 years ago
kallisti5 replied to me that he does not have the bandwidth to look into things this week, but he notes that the builders are running Docker images as specified in the "infrastructure" repo, so anyone can launch these and test builds with the exact configuration the CI uses.
Anyone have the time to look into that (maybe nielx?) If nobody else does, I might, we'll see...
comment:16 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | assigned → in-progress |
Looking into it today. I will explore some theories and keep you guys up to date here.
comment:17 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | in-progress → assigned |
I retried with the latest hrev54139 image, and it seems to work again. Could you verify @diver?
comment:19 by , 5 years ago
Did you try with a fresh install? Updating from a broken revision won't fix it as the files are outside of packages.
comment:20 by , 5 years ago
I tried the Live CD Image, if that helps. I verified that:
- There are bookmarks in WebPositive
- There are templates in the New menu in Tracker (right click on the desktop)
Did I look at the right things?
comment:21 by , 5 years ago
Interestingly enough, I get the same result on the x86_64 hrev54088 livecd when booting to desktop.
So was it an installer problem instead of a build problem? What were the exact circumstances under which this issue was discovered?
comment:22 by , 5 years ago
Ah, no, I've used my existing install. If that's the case, then it's probably fixed.
comment:23 by , 5 years ago
Component: | Sys-Admin → Applications/Installer |
---|---|
Summary: | [Build System] WebPositive bookmarks are broken (regression) → [Installer] WebPositive bookmarks are broken (regression) |
I did another test, and installed the hrev54139 to a fresh partition. Now I can reproduce the behaviour in this ticket. It seems to be an installer issue.
comment:24 by , 5 years ago
Owner: | changed from | to
---|
Leorize, maybe you can have a look at this? You were the last to touch Installer CopyEngine code. Does it still copy attributes properly?
comment:25 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | assigned → in-progress |
Proposed fix in https://review.haiku-os.org/c/haiku/+/2600
Possibly, but the CI was recently fixed for attribute issues. Is it still a problem in the most recent nightlies?